체크박스 클릭시 작업을 완료한 것으로 표시, 삭제 기능 구현

--- a/todolist.html
+++ b/todolist.html
@@ -3,21 +3,27 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Todolist</title>
-    <style></style>
+    <link rel="stylesheet" href="./todolist.css" />
 </head>
 <body>
-	<div class="container">
-        <h1 class="app-title">todos</h1>
-        <ul class="todo-list js-todo-list"></ul>
-        <div class="empty-state">
-            <h2 class="empty-state_title">Add your first todo</h2>
-            <p class="empty-state_description">What do you want to get done today?</p>
+    <main>
+        <div class="container">
+            <h1 class="app-title">todos</h1>
+            <ul class="todo-list js-todo-list"></ul>
+            <!-- 빈 상태일 때 화면 -->
+            <div class="empty-state">
+                <svg class="checklist-icon"><use href="#checklist-icon"></use></svg>
+                <h2 class="empty-state__title">Add your first todo</h2>
+                <p class="empty-state__description">
+                    What do you want to get done today?
+                </p>
+            </div>
+            <!-- 입력폼 -->
+            <form class="todo-form js-form">
+                <input autofocus type="text" aria-label="Enter a new todo item" placeholder="E.g. Build a web app" class="js-todo-input">
+            </form>
         </div>
-        <!-- end -->
-        <form class="todo-form js-form">
-            <input autofocus type="text" aria-label="Enter a new todo item" placeholder="E.g. Build a web app" class="js-todo-input">
-        </form>
-    </div>
+    </main>
 </body>
 <script src="./todolist.js"></script>
 </html>
